deploy:配置 git部署并添加 hexo-deployer-git 依赖
- 在 _config.yml 中设置 deploy 类型为 git，并添加 GitHub 仓库地址和分支
- 在 package.json 中添加 hexo-deployer-git 插件，以支持 git 部署

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,9 @@ plugins:
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: git@github.com:blog_hexo/jianglinper.github.io.git
+  branch: master
 
 # algolia搜索: https://github.com/LouisBarranqueiro/hexo-algoliasearch
 algolia:
